# vsp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-Apache-2.0  LICENSE-MIT  Makefile  README.md  build.sh  configure  distro.ps1  start.py
.devops/: git_commit_all.sh  git_push_all.sh  git_recreate_branch.sh
ci/: dependencies.txt
ci/docker/: Dockerfile
demo/: HelloWorld.vsp
docs/: Compilation.md  DirectoryStructure.md  Grammar.md  TODO.md
docs/grammar/: grammar.ebnf
docs/project/: Project.md
etc/: logging.yaml
scripts/: distro.ps1  distro.sh  setup_llvm.sh
src/: Version.hpp  Version.hpp.in  context.hpp  fwd.h  fwd.hpp  version.h  version.h.in  version.hpp  version.hpp.in
src/ast/: Statement.hpp  symtable.hpp
src/basic/: Either.hpp  Lang.hpp  SourceLocation.cpp  SourceLocation.hpp
src/bootstrap/: bootstrap.py  file-tree.txt
src/bytecode/: Bytecode.hpp
src/ci/: env.sh  run.sh
src/cli/: Argparser.hpp  Repl.cpp  Repl.hpp  Table.hpp  argparse.hpp  argparser.hpp  cli.cpp  cli.h  cli.hpp  repl.cpp  repl.hpp
src/compiler/: .gitignore  Cargo.toml  Makefile  rustfmt.toml
src/compiler/.cargo/: config
src/compiler/ast/: Cargo.toml
src/compiler/ast-parser/: Cargo.toml
src/compiler/ast-parser/src/: kind.rs  lib.rs  result.txt  token.rs
src/compiler/ast-parser/src/lex/: mod.rs
src/compiler/ast-parser/src/parser/: context.rs  mod.rs  state.rs  token.rs
src/compiler/ast-parser/src/parserc/: ast.rs  mod.rs  token.rs
src/compiler/ast/src/: entry.rs  lib.rs  node.rs  parser.rs  printer.rs  visitor.rs
src/compiler/ast/src/ast/: annotation.rs  expr.rs  function.rs  mod.rs  modifier.rs  module.rs  naming.rs  stmt.rs  types.rs
src/compiler/cli/: Cargo.toml
src/compiler/cli/src/: repl.rs  shell.rs
src/compiler/compiler/: Cargo.toml
src/compiler/compiler/src/: dispatch.rs  lib.rs  option.rs
src/compiler/compiler/src/action/: mod.rs
src/compiler/compiler/src/db/: mod.rs
src/compiler/compiler/src/source/: mod.rs
src/compiler/compiler/src/sym/: mod.rs
src/compiler/dbg/: Cargo.toml
src/compiler/dbg/src/: lib.rs
src/compiler/dbg/src/dbg/: mod.rs
src/compiler/debugger/: Cargo.toml
src/compiler/debugger/src/dbg/: mod.rs
src/compiler/diag/: Cargo.toml
src/compiler/diagnostic/src/: lib.rs
src/compiler/dump/: Cargo.toml
src/compiler/dump/src/: lib.rs
src/compiler/error/: Cargo.toml  README.md
src/compiler/error/src/: backtrace.rs  chain.rs  error.rs  fmt.rs  lib.rs  macros.rs  ptr.rs  wrapper.rs
src/compiler/fs/: Cargo.toml
src/compiler/fs/src/: lib.rs  manager.rs  path.rs  source.rs
src/compiler/fs/src/vfs/: mod.rs  path.rs
src/compiler/lexer/: Cargo.toml
src/compiler/lexer/src/: lexer.rs  lib.rs
src/compiler/llvm/: Cargo.toml
src/compiler/llvm/src/: lib.rs  main.rs  types.rs
src/compiler/llvm/src/llvm/: ir.rs  mod.rs
src/compiler/lsp/: Cargo.toml
src/compiler/lsp/src/: lib.rs  main.rs
src/compiler/lsp/src/config/: mod.rs
src/compiler/lsp/src/server/: mod.rs
src/compiler/mx/: Cargo.toml
src/compiler/mx/src/: process.rs
src/compiler/parser/: Cargo.toml
src/compiler/parser/src/fs/: mod.rs
src/compiler/parserc/: Cargo.toml
src/compiler/parserc/src/: lib.rs
src/compiler/parserc/src/combinator/: adapter.rs  basic.rs  conjunct.rs  content.rs  mod.rs  regex.rs  satisfy.rs
src/compiler/parserc/src/parser/: convert.rs  mod.rs  primitive.rs
src/compiler/platform/: Cargo.toml
src/compiler/platform/src/: lib.rs
src/compiler/platform/src/linux/: os.rs
src/compiler/platform/src/proc/: mod.rs
src/compiler/pm/: Cargo.toml
src/compiler/pm/resources/new/: build.vsp  lib.vsp  manifest.toml
src/compiler/pm/src/: lib.rs  manifest.rs  vcs.rs
src/compiler/pm/src/dep/: mod.rs
src/compiler/pm/src/new/: mod.rs
src/compiler/pm/src/repo/: config.rs  index.rs  mod.rs
src/compiler/pm/src/vcs/: fossil.rs  git.rs  hg.rs  mod.rs  svn.rs
src/compiler/span/: Cargo.toml
src/compiler/span/src/: lib.rs  span.rs
src/compiler/support/: Cargo.toml
src/compiler/support/src/: clap_ext.rs  compress.rs  debug.rs  exitcode.rs  id.rs  lib.rs  process.rs  ptr.rs  resources.rs  semver.rs  substring.rs  timer.rs
src/compiler/support/src/json/: mod.rs
src/compiler/token/: Cargo.toml
src/compiler/token/src/: lib.rs
src/compiler/vsp-ast/: Cargo.toml
src/compiler/vsp-ast/src/: node.rs
src/compiler/vsp-ast/src/ast/: mod.rs  module.rs
src/compiler/vsp-bin/: Cargo.toml
src/compiler/vsp-bin/src/: config.rs
src/compiler/vsp-bin/src/ops/: clean.rs  compile.rs  debug.rs  lint.rs  new.rs  ps.rs  repl.rs  run.rs  stack.rs  tar.rs
src/compiler/vsp-cli/: Cargo.toml
src/compiler/vsp-cli/src/: lib.rs  repl.rs  shell.rs
src/compiler/vsp-error/: Cargo.toml
src/compiler/vsp-error/src/: error.rs  lib.rs
src/compiler/vsp-fmt/: Cargo.toml
src/compiler/vsp-fmt/src/: main.rs  table.rs
src/compiler/vsp-fs/: Cargo.toml
src/compiler/vsp-fs/src/: source.rs
src/compiler/vsp-lexer/: Cargo.toml
src/compiler/vsp-lexer/src/: lexer.rs  lib.rs  scanner.rs
src/compiler/vsp-llvm/: Cargo.toml
src/compiler/vsp-llvm/src/: main.rs
src/compiler/vsp-llvm/src/llvm/: ir.rs
src/compiler/vsp-mx/: Cargo.toml
src/compiler/vsp-mx/src/: process.rs
src/compiler/vsp-packager/: Cargo.toml
src/compiler/vsp-packager/src/: lib.rs  manifest.rs  vcs.rs
src/compiler/vsp-packager/src/project/: manifest.yaml  mod.rs
src/compiler/vsp-parser/: Cargo.toml
src/compiler/vsp-parser/src/fs/: base.rs  manager.rs
src/compiler/vsp-platform/: Cargo.toml
src/compiler/vsp-platform/src/linux/: os.rs
src/compiler/vsp-support/: Cargo.toml
src/compiler/vsp-support/src/: id.rs  lib.rs  ptr.rs  semver.rs
src/distro/: .gitignore  Cargo.toml  README.md  bootstrap.py  compress.py  distro.py  file-tree.csv  file-tree.txt  lib-dev.txt  main.ps1  main.py  main.sh  module.py  package.json  project.py  release_config.py  shell.py  support.py  type.py
src/distro/.cargo/: config
src/distro/resources/: file-tree.csv
src/distro/src/ops/: mod.rs
src/distro/src/support/: compression.rs
src/vm/: VM.cpp  (+10 more)
(+121 files in other folders)
