CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(vsp)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(SRC_DIR   "${PROJECT_SOURCE_DIR}/src")
SET(BUILD_DIR "${PROJECT_BINARY_DIR}/build")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BUILD_DIR}/bin")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BUILD_DIR}/lib")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BUILD_DIR}/lib")

#
FUNCTION(MESSAGE_LIST)
  FOREACH(_arg IN LISTS ARGN)
    MESSAGE("    * ${_arg}")
  ENDFOREACH()
ENDFUNCTION(MESSAGE_LIST)

# Define source file (*.cpp, *.h)
FILE(GLOB_RECURSE SRC_FILES
  "${SRC_DIR}/*.cpp"
  "${SRC_DIR}/*.h"
)
FILE(GLOB_RECURSE BIN_FILES
  "${SRC_DIR}/bin/*.cpp"
)
LIST(REMOVE_ITEM SRC_FILES ${BIN_FILES})
MESSAGE(">>> Source files (*.cpp, *.h):")
MESSAGE_LIST(${SRC_FILES})

# Define header directory (*.h)
SET(HEAD_DIR ${SRC_FILES})
LIST(FILTER HEAD_DIR INCLUDE REGEX "(.*).h$")
LIST(TRANSFORM HEAD_DIR REPLACE "(.*)/(.*).h$" "\\1")
LIST(REMOVE_DUPLICATES HEAD_DIR)
INCLUDE_DIRECTORIES(${HEAD_DIR})
MESSAGE(">>> Header directory (*.h)")
MESSAGE_LIST(${HEAD_DIR})

# Define executables (src/bin/*.cpp)
LIST(TRANSFORM BIN_FILES REPLACE "${SRC_DIR}/bin/(.*).cpp" "\\1" OUTPUT_VARIABLE EXECUTABLES)
MESSAGE(">>> Executables (src/bin/*.cpp)")
MESSAGE_LIST(${EXECUTABLES})
FOREACH(_executables ${EXECUTABLES})
  ADD_EXECUTABLE(${_executables}
                "${SRC_DIR}/bin/${_executables}.cpp"
                "${SRC_FILES}")
ENDFOREACH()

FILE(COPY "LICENSE" "README.md"
     DESTINATION ${BUILD_DIR})