[workspace]
members = [
  "ast",
  "ast-parser",
  "bin",
  "cli",
  "compiler",
  "fs",
  "mx",
#  "lexer",
  "llvm",
  "lsp",
  "platform",
  "pm",
  "span",
  "support",
  "token",
]

[workspace.dependencies]
anyhow = "^1.0.66"
clap = { version = "^4.2.1", features = ["derive"] }
clap_complete = "^4.2.1"
combine = "^4.6.6"
git2 = "^0.16.1"
inkwell = { version = "0.1.0-beta.5", features = [ "llvm14-0" ] }
lsp-server = "^0.7.0"
nanoid = "^0.4.0"
regex = "^1.7.3"
semver = "^1.0.17"
serde = { version = "^1.0.147", features = [ "derive" ] }
target-lexicon = "^0.12.6"
