[workspace]
members = [
  "ast",
  "ast-parser",
  "bin",
  "cli",
  "compiler",
  "dbg",
  "diag",
  "fs",
  "llvm",
  "lsp",
  "platform",
  "pm",
  "span",
  "support",
  "token",
]

[workspace.dependencies]
anyhow = "^1.0.66"
clap = { version = "^4.2.1", features = ["derive"] }
combine = "^4.6.6"
getset = "^0.1.2"
git2 = "^0.16.1"
inkwell = { version = "0.1.0-beta.5", features = [ "llvm14-0" ] }
log = "^0.4.17"
lsp-server = "^0.7.0"
lsp-types = "=0.93.2"
nanoid = "^0.4.0"
regex = "^1.7.3"
semver = "^1.0.17"
serde = { version = "^1.0.147", features = [ "derive" ] }
serde_json = "^1.0.96"
simplelog = "^0.12.0"
shlex = "^1.1.0"
target-lexicon = "^0.12.6"
