[workspace]
members = [
  "ast",
  "ast-parser",
  "bin",
  "cli",
  "compiler",
  "debugger",
  "diagnostic",
  "error",
  "fs",
  "llvm",
  "lsp",
  "platform",
  "pm",
  "span",
  "support",
]

[workspace.dependencies]

  [workspace.dependencies.anstyle]
  version = "^1.0.0"

  [workspace.dependencies.anyhow]
  version = "^1.0.66"
  features = [
    "backtrace",
    "std",
  ]

  [workspace.dependencies.clap]
  version = "^4.2.1"
  features = [
    "color",
    "derive",
    "unstable-styles",
  ]

  [workspace.dependencies.combine]
  version = "^4.6.6"

  [workspace.dependencies.getset]
  version = "^0.1.2"

  [workspace.dependencies.git2]
  version = "^0.16.1"

  [workspace.dependencies.inkwell]
  version = "0.1.0-beta.5"
  features = [
    "llvm14-0",
  ]

  [workspace.dependencies.log]
  version = "^0.4.17"

  [workspace.dependencies.lsp-server]
  version = "^0.7.0"

  [workspace.dependencies.lsp-types]
  version = "=0.93.2"

  [workspace.dependencies.nanoid]
  version = "^0.4.0"

  [workspace.dependencies.proc-macro2]
  version = "^1.0.63"

  [workspace.dependencies.regex]
  version = "^1.7.3"

  [workspace.dependencies.semver]
  version = "^1.0.17"

  [workspace.dependencies.serde]
  version = "^1.0.147"
  features = [
    "derive",
  ]

  [workspace.dependencies.serde_json]
  version = "^1.0.96"

  [workspace.dependencies.simplelog]
  version = "^0.12.0"

  [workspace.dependencies.shlex]
  version = "^1.1.0"

  [workspace.dependencies.target-lexicon]
  version = "^0.12.6"
