[package]
name = "vsp-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]

    [dependencies.getset]
    workspace = true

    [dependencies.target-lexicon]
    workspace = true

    [dependencies.vsp-diag]
    path = "../diagnostic"

    [dependencies.vsp-fs]
    path = "../fs"

    [dependencies.vsp-error]
    path = "../error"

    [dependencies.semver]
    workspace = true
