[package]
name = "vsp-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

  [dependencies.clap]
  workspace = true

  [dependencies.shlex]
  workspace = true

  [dependencies.vsp-error]
  path = "../error"

  [dependencies.vsp-support]
  path = "../support"
