[package]
name = "vsp-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow.workspace = true
md5 = { package = "md-5", version = "^0.10.0" }
# Workspace dependencies
vsp-error.path = "../error"
