[package]
name = "vsp-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

  [dependencies.log]
  workspace = true

  [dependencies.lsp-server]
  workspace = true

  [dependencies.lsp-types]
  workspace = true

  [dependencies.serde_json]
  workspace = true

  [dependencies.simplelog]
  workspace = true

  [dependencies.threadpool]
  workspace = true

  [dependencies.vsp-error]
  path = "../error"

  [dependencies.vsp-support]
  path = "../support"
