[package]
name = "vsp-parserc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
anyhow.workspace = true
regex.workspace = true
# Workspace dependencies
vsp-ast.path = "../ast"
vsp-span.path = "../span"
vsp-support.path = "../support"
vsp-token.path = "../token"
