[package]
name = "vsp-pm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
semver.workspace = true
serde.workspace = true

# Workspace dependencies
vsp-support.path = "../support"

[target.'cfg(target_env = "musl")'.dependencies]

[target.'cfg(not(target_env = "musl"))'.dependencies]
git2.workspace = true
