[package]
name = "vsp-support"
version = "0.1.0"
edition = "2021"

[dependencies]

    [dependencies.anyhow]
    workspace = true

    [dependencies.clap]
    workspace = true

    [dependencies.nanoid]
    workspace = true

    [dependencies.semver]
    workspace = true

    [dependencies.serde]
    workspace = true

    [dependencies.serde_json]
    workspace = true

    [dependencies.target-lexicon]
    workspace = true
