[package]
name = "vsp-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vsp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true

vsp-cli = { path = "../vsp-cli" }
vsp-mx = { path = "../vsp-mx" }
vsp-packager = { path = "../vsp-packager" }
vsp-support = { path = "../vsp-support" }
